orbs/mug/4/work/compile.log
mug.c: In function ‘main’:
mug.c:14:9: warning: implicit declaration of function ‘atoi’ [-Wimplicit-function-declaration]
     i = atoi(argv[1]);
         ^
mug.c:18:1: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
 printf("\nORBS:%d:%d:%s:%d\n", 17, 14, "i", i);
 ^
mug.c:18:1: warning: incompatible implicit declaration of built-in function ‘printf’
mug.c:18:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
mug.c: At top level:
mug.c:31:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
